# plugin-moai-hello

./: CMakeLists.txt  MOAIHello.cpp  host.cpp  host.h  plugin.CMake
